part_ef and pnxt_ef

--- a/CMSAK4/data/CMSAK4_ParT_ef.yaml
+++ b/CMSAK4/data/CMSAK4_ParT_ef.yaml
@@ -121,11 +121,13 @@ inputs:
          - [sv_mask, null]
    pf_ef_idx:
       length: 300 # max lenght of the variable for each event (eg: max number of tracks combinations)
+      pad_mode: wrap
       vars:
          - [track1_index, null]
          - [track2_index, null]
    pf_ef:
       length: 300 # max lenght of the variable for each event (eg: max number of tracks combinations)
+      pad_mode: wrap
       vars:
          - [pca_distance, null]
          - [pca_significance, null]
