--- a/CMSAK4/data/CMSAK4_PNXT_ef.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef.yaml
@@ -223,8 +223,10 @@ weights:
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 9))).astype('int').tolist()
       # jet_pt: [15, 25, 43, 72, 122, 207, 350, 592, 1000]
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 16))).astype('int').tolist()
-      jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
-      jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
+      #jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
+      jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186]
+      #jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
+      jet_eta: [-3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0]
    reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
    class_weights: [1, 1, 2.5, 5, 0.15, 1]
    reweight_threshold: 15
