--- a/CMSAK4/data/CMSAK4_PNXT_ef.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef.yaml
@@ -2,7 +2,7 @@ selection:
    ### use `&`, `|`, `~` for logical operations on numpy arrays
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
    >-
-   (np.abs(jet_eta)<3) & (jet_pt>15) & (jet_pt<186) & (event_no%7!=0)
+   (np.abs(jet_eta)<2) & (jet_pt>35) & (jet_pt<106) & (event_no%7!=0)
    & ( (jet_hadronFlavour>0) | ((jet_hadronFlavour==0) & (np.abs(jet_partonFlavour)!=4) & (np.abs(jet_partonFlavour)!=5)) )
    & ( ~((jet_genjet_pt>0) & (jet_hadronFlavour==0) & (jet_partonFlavour==0)) | ((jet_genjet_pt>0) & (jet_hadronFlavour==0) & (jet_partonFlavour==0) & (jet_pt<186)) )
    & ( (jet_genjet_pt>0) | ((jet_genjet_pt<=0) & (jet_pt<61)) )
@@ -171,11 +171,14 @@ labels:
    ### type can be `simple`, `custom`
    ### [option 1] use `simple` for binary/multi-class classification, then `value` is a list of 0-1 labels
    type: simple
-   value: [label_b, label_bb, label_c, label_cc, label_uds, label_g, label_undef, label_pu] # label_pf_from_b, label_pf_from_c, label_pf_from_g]
+   value: [label_b, label_bb, label_c, label_cc, label_uds, label_g, label_undef, label_pu]
    ### [option 2] otherwise use `custom` to define the label, then `value` is a map
    # type: custom
    # value:
       # target_mass: np.where(fj_isQCD, fj_genjet_sdmass, fj_gen_mass)
+
+
+#auxiliary_labels
 
 observers:
    - event_no
@@ -224,9 +227,9 @@ weights:
       # jet_pt: [15, 25, 43, 72, 122, 207, 350, 592, 1000]
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 16))).astype('int').tolist()
       #jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
-      jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186]
+      jet_pt: [35, 46, 61, 80, 106]
       #jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
-      jet_eta: [-3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0]
+      jet_eta: [2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0]
    reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
    class_weights: [1, 1, 2.5, 5, 0.15, 1]
    reweight_threshold: 15
