--- a/CMSAK4/data/CMSAK4_PN_ef.yaml
+++ b/CMSAK4/data/CMSAK4_PN_ef.yaml
@@ -98,12 +98,12 @@ inputs:
       length: 5
       vars:
          - [sv_mask, null]
-   pf_ef_idx:
+   track_ef_idx:
       length: 300 # max lenght of the variable for each event (eg: max number of tracks combinations)
       vars:
          - [track1_index, null]
          - [track2_index, null]
-   pf_ef:
+   track_ef:
       length: 300 # max lenght of the variable for each event (eg: max number of tracks combinations)
       vars:
          - [pca_distance, null]
