--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux.yaml
@@ -58,9 +58,9 @@ new_variables:
    pf_vtx_z: ak.fill_none(ak.pad_none(pfcand_vtx_z, 50, axis=1, clip=True),-1)
    pf_dist_pv: ak.fill_none(ak.pad_none(pfcand_dist_from_pv, 50, axis=1, clip=True),-1)
 
-   #num_pf: ak.values_astype(np.sqrt(ak.num(dist_vtx_12, 1)), np.int_)
-   #unflat_dist: ak.unflatten(dist_vtx_12, np.repeat(num_pf, num_pf, axis=0), axis=1)
-   #pair_dist_vtx: ak.fill_none(ak.pad_none(ak.pad_none(unflat_dist, 30, axis=2, clip=True), 30, axis=1, clip=True),-2, axis=2)
+   num_pf: ak.values_astype(np.sqrt(ak.num(pfcand_dist_vtx_12, 1)), np.int_)
+   unflat_dist: ak.unflatten(pfcand_dist_vtx_12, np.repeat(num_pf, num_pf, axis=0), axis=1)
+   pair_dist_vtx: ak.fill_none(ak.pad_none(ak.pad_none(unflat_dist, 30, axis=2, clip=True), 30, axis=1, clip=True),-2, axis=2)
 
 
 
@@ -159,7 +159,7 @@ inputs:
          - [track2_index, null]
    track_ef:
       length: 625 # max lenght of the variable for each event (eg: max number of tracks combinations)
-      vars:
+      vars: # there are 26 variables
          - [pca_distance, null]
          - [pca_significance, null]
          - [pcaSeed_x1, null]
@@ -205,18 +205,19 @@ labels:
 
 aux_labels:
    type: custom
-   value:
-    #  aux_label_pf_clas_b: pf_b
-    #  aux_label_pf_clas_c: pf_c
-    #  aux_label_pf_clas_bc: pf_bc
-     # aux_label_pf_clas_other: pf_other
-      aux_labels_pf_regr_dist_pv: pf_dist_pv
-      aux_label_pf_regr_vtx_x: pf_vtx_x
-      aux_label_pf_regr_vtx_y: pf_vtx_y
-      aux_label_pf_regr_vtx_z: pf_vtx_z
-   #value_pair:
-    #  aux_label_pair_bin_dist_vtx: pair_dist_vtx
-    #  aux_label_pair_bin_dist_vtx2: pair_dist_vtx
+   #value_clas:
+      #aux_label_pf_clas_b: pf_b
+      #aux_label_pf_clas_c: pf_c
+      #aux_label_pf_clas_bc: pf_bc
+      #aux_label_pf_clas_other: pf_other
+   #value_regr:
+      #aux_labels_pf_regr_dist_pv: pf_dist_pv
+      #aux_label_pf_regr_vtx_x: pf_vtx_x
+      #aux_label_pf_regr_vtx_y: pf_vtx_y
+      #aux_label_pf_regr_vtx_z: pf_vtx_z
+   value_pair:
+      aux_label_pair_bin_dist_vtx: pair_dist_vtx
+      aux_label_pair_bin_dist_vtx2: pair_dist_vtx
 
 
 observers:
