--- a/CMSAK4/data/CMSAK4_PN.yaml
+++ b/CMSAK4/data/CMSAK4_PN.yaml
@@ -144,20 +144,20 @@ monitor_variables:
    # - jet_nCHadrons
    # - jet_genjet_pt
 
-weights:
+#weights:
    ### [option 1] use precomputed weights stored in the input files
    # use_precomputed_weights: true
    # weight_branches: [weight, class_weight]
    ### [option 2] compute weights on-the-fly using reweighting histograms
-   use_precomputed_weights: false
-   reweight_method: flat
-   reweight_vars:
+   #use_precomputed_weights: false
+   #reweight_method: flat
+   #reweight_vars:
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 9))).astype('int').tolist()
       # jet_pt: [15, 25, 43, 72, 122, 207, 350, 592, 1000]
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 16))).astype('int').tolist()
-      jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
-      jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
-   reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
-   class_weights: [1, 1, 2.5, 5, 0.15, 1]
-   reweight_threshold: 15
-   reweight_hists:
+      #jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
+      #jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
+   #reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
+   #class_weights: [1, 1, 2.5, 5, 0.15, 1]
+   #reweight_threshold: 15
+   #reweight_hists:
