--- a/CMSAK4/data/CMSAK4_PNXT.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT.yaml
@@ -44,23 +44,23 @@ preprocess:
   ### method: [manual, auto] - whether to use manually specified parameters for variable standardization
   method: manual
   ### data_fraction: fraction of events to use when calculating the mean/scale for the standardization
-  data_fraction: 
+  data_fraction:
 
 inputs:
    pf_points:
       length: 50
-      vars: 
+      vars:
          - [pfcand_etarel, null]
          - [pfcand_phirel, null]
    pf_features:
       length: 50
-      vars: 
+      vars:
       ### [format 1]: var_name (no transformation)
-      ### [format 2]: [var_name, 
-      ###              subtract_by(optional, default=None, no transf. if preprocess.method=manual, auto transf. if preprocess.method=auto), 
-      ###              multiply_by(optional, default=1), 
-      ###              clip_min(optional, default=-5), 
-      ###              clip_max(optional, default=5), 
+      ### [format 2]: [var_name,
+      ###              subtract_by(optional, default=None, no transf. if preprocess.method=manual, auto transf. if preprocess.method=auto),
+      ###              multiply_by(optional, default=1),
+      ###              clip_min(optional, default=-5),
+      ###              clip_max(optional, default=5),
       ###              pad_value(optional, default=0)]
          - [pfcand_pt_log_nopuppi, 0.8, 0.7]
          - [pfcand_e_log_nopuppi, 1.2, 0.6]
@@ -91,7 +91,7 @@ inputs:
          - [pfcand_energy, null]
    pf_mask:
       length: 50
-      vars: 
+      vars:
          - [pfcand_mask, null]
    sv_points:
       length: 5
@@ -131,8 +131,8 @@ labels:
    value: [label_b, label_bb, label_c, label_cc, label_uds, label_g, label_undef, label_pu]
    ### [option 2] otherwise use `custom` to define the label, then `value` is a map
    # type: custom
-   # value: 
-      # target_mass: np.where(fj_isQCD, fj_genjet_sdmass, fj_gen_mass) 
+   # value:
+      # target_mass: np.where(fj_isQCD, fj_genjet_sdmass, fj_gen_mass)
 
 observers:
    - event_no
@@ -169,20 +169,20 @@ monitor_variables:
    # - jet_nCHadrons
    # - jet_genjet_pt
 
-weights:
+#weights:
    ### [option 1] use precomputed weights stored in the input files
    # use_precomputed_weights: true
    # weight_branches: [weight, class_weight]
    ### [option 2] compute weights on-the-fly using reweighting histograms
-   use_precomputed_weights: false
-   reweight_method: flat
-   reweight_vars:
+   #use_precomputed_weights: false
+   #reweight_method: flat
+   #reweight_vars:
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 9))).astype('int').tolist()
       # jet_pt: [15, 25, 43, 72, 122, 207, 350, 592, 1000]
       # np.round(np.exp(np.linspace(np.log(15), np.log(1000), 16))).astype('int').tolist()
-      jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
-      jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
-   reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
-   class_weights: [1, 1, 2.5, 5, 0.15, 1]
-   reweight_threshold: 15
-   reweight_hists:
+      #jet_pt: [15, 20, 26, 35, 46, 61, 80, 106, 141, 186, 247, 326, 432, 571, 756, 1000]
+      #jet_eta: [-4.7, -3.0, -2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 4.7]
+   #reweight_classes: [label_catB, label_catC, label_uds, label_g, label_undef, label_pu]
+   #class_weights: [1, 1, 2.5, 5, 0.15, 1]
+   #reweight_threshold: 15
+   #reweight_hists:
