--- a/performance/performance_comparison.yaml
+++ b/performance/performance_comparison.yaml
@@ -1,11 +1,11 @@
 ## name of the directories where the various networks are saved.
 
-performance_20230224-230858_CMSAK4_PNXT_ef_aux_clas_ranger_lr0.01_batch512_50M_noweights_230k:        ['clas', 'b']
-performance_20230224-230235_CMSAK4_PNXT_ef_aux_bin_ranger_lr0.01_batch512_50M_noweights_230k:        ['bin', 'c']
-performance_20230224-174544_CMSAK4_PNXT_ef_aux_tot_ranger_lr0.01_batch512_50M_noweights_230k:        ['tot', 'r']
-performance_20230224-174531_CMSAK4_PNXT_ef_aux_ranger_lr0.01_batch512_50M_noweights_230k:        ['aux', 'g']
-performance_20230224-174518_CMSAK4_PNXT_ef_aux_regr_ranger_lr0.01_batch512_50M_noweights_230k:        ['regr', 'm']
-performance_20230218-141615_CMSAK4_PNXT_ranger_lr0.01_batch512_50M_noweights_230k:        ['pnxt', 'k']
-performance_20230218-141609_CMSAK4_PNXT_ef_ranger_lr0.01_batch512_50M_noweights_230k:        ['ef', 'orange']
-performance_20230220-232814_CMSAK4_PN_ranger_lr0.01_batch512_50M_noweights_230k:         ['pn', 'gray']
-#performance_20230303-093857_CMSAK4_PNXT_ef_aux_cb_ranger_lr0.01_batch512_50M_noweights_230k:         ['cb', 'purple']
+input/performance_20230224-230858_CMSAK4_PNXT_ef_aux_clas_ranger_lr0.01_batch512_50M_noweights_230k:        ['clas', 'b']
+# input/performance_20230224-230235_CMSAK4_PNXT_ef_aux_bin_ranger_lr0.01_batch512_50M_noweights_230k:        ['bin', 'c']
+# input/performance_20230224-174544_CMSAK4_PNXT_ef_aux_tot_ranger_lr0.01_batch512_50M_noweights_230k:        ['tot', 'r']
+# input/performance_20230224-174531_CMSAK4_PNXT_ef_aux_ranger_lr0.01_batch512_50M_noweights_230k:        ['aux', 'g']
+# input/performance_20230224-174518_CMSAK4_PNXT_ef_aux_regr_ranger_lr0.01_batch512_50M_noweights_230k:        ['regr', 'm']
+# input/performance_20230218-141615_CMSAK4_PNXT_ranger_lr0.01_batch512_50M_noweights_230k:        ['pnxt', 'k']
+input/performance_20230220-232814_CMSAK4_PN_ranger_lr0.01_batch512_50M_noweights_230k:         ['pn', 'gray']
+#input/performance_20230218-141609_CMSAK4_PNXT_ef_ranger_lr0.01_batch512_50M_noweights_230k:        ['ef', 'orange']
+#input/performance_20230303-093857_CMSAK4_PNXT_ef_aux_cb_ranger_lr0.01_batch512_50M_noweights_230k:         ['cb', 'purple']
