--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_cb.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_cb.yaml
@@ -48,10 +48,12 @@ new_variables:
    from_b_bool: ak.values_astype(pfcand_from_b, np.bool_)
    from_c_bool: ak.values_astype(pfcand_from_c, np.bool_)
 
-   pf_b: ak.fill_none(ak.pad_none(( from_b_bool & ~from_c_bool)+aux_label_mask, 50, axis=1, clip=True),-1, axis=-1)
+   pf_b: ak.fill_none(ak.pad_none(( from_b_bool & ~from_c_bool)+aux_label_mask, 50, axis=1, clip=True),-1)
    pf_c: ak.fill_none(ak.pad_none((from_c_bool & ~from_b_bool)+aux_label_mask, 50, axis=1, clip=True),-1)
    pf_bc: ak.fill_none(ak.pad_none((from_b_bool & from_c_bool)+aux_label_mask, 50, axis=1, clip=True),-1)
    pf_other: ak.fill_none(ak.pad_none((~from_b_bool & ~from_c_bool)+2*aux_label_mask, 50, axis=1, clip=True),-1)
+   pf_charged: ak.fill_none(ak.pad_none( (pfcand_charge != 0), 50, axis=1, clip=True),-1)
+   pf_IPsig: ak.fill_none(ak.pad_none(pfcand_btagSip3dSig, 50, axis=1, clip=True),-1)
 
    num_pf: ak.values_astype(np.sqrt(ak.num(pfcand_dist_vtx_12, 1)), np.int_)
    unflat_dist: ak.unflatten(pfcand_dist_vtx_12,np.repeat(num_pf, num_pf, axis=0), axis=1)
@@ -199,6 +201,8 @@ aux_labels:
       aux_label_pf_clas_c: pf_c
       aux_label_pf_clas_bc: pf_bc
       aux_label_pf_clas_other: pf_other
+      pf_mask_charged: pf_charged
+      pf_var_IPsig: pf_IPsig
    value_pair:
       aux_label_pair_bin_dist_vtx: pair_dist_vtx
       pair_threshold: pair_dist_threshold
