--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_regr.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_regr.yaml
@@ -51,7 +51,7 @@ new_variables:
 
    aux_label_mask: (pfcand_from_b != -1) -1
    from_b_bool: ak.values_astype(pfcand_from_b, np.bool_)
-   pf_b: ak.fill_none(ak.pad_none(from_b_bool+aux_label_mask, 50, axis=1, clip=True),-1, axis=-1)
+   pf_from_b: ak.fill_none(ak.pad_none(from_b_bool+aux_label_mask, 50, axis=1, clip=True),-1)
 
 
 preprocess:
@@ -194,7 +194,7 @@ aux_labels:
       aux_label_pf_regr_vtx_x: pf_vtx_x
       aux_label_pf_regr_vtx_y: pf_vtx_y
       aux_label_pf_regr_vtx_z: pf_vtx_z
-      aux_label_pf_mask_from_b: pf_b
+      pf_mask_from_b: pf_from_b
 
 
 
