partial history epoch + idsig

--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,6 @@ monitor/
 *.pickle
 history_plot*/
 roc_curve*/
-performance_comparison.yaml
+performance_comparison*.yaml
 input/
 *.code-workspace
