--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
@@ -119,36 +119,6 @@ inputs:
       length: 50
       vars:
          - [pfcand_mask, null]
-   sv_points:
-      length: 5
-      vars:
-         - [sv_etarel, null]
-         - [sv_phirel, null]
-   sv_features:
-      length: 5
-      vars:
-         - [sv_pt_log, 2.8, 0.8]
-         - [sv_mass, 1.1, 0.6]
-         - [sv_etarel, null]
-         - [sv_phirel, null]
-         - [sv_abseta, 0.8, 1.2]
-         - [sv_ntracks, 3, 0.5]
-         - [sv_normchi2, 0.7, 0.7]
-         - [sv_dxy, 0.2, 0.6]
-         - [sv_dxysig, 5, 0.03]
-         - [sv_d3d, 0.35, 0.4]
-         - [sv_d3dsig, 5, 0.03]
-   sv_vectors:
-      length: 5
-      vars:
-         - [sv_px, null]
-         - [sv_py, null]
-         - [sv_pz, null]
-         - [sv_energy, null]
-   sv_mask:
-      length: 5
-      vars:
-         - [sv_mask, null]
    track_ef_idx:
       length: 625 # max lenght of the variable for each event (eg: max number of tracks combinations)
       vars:
@@ -187,6 +157,36 @@ inputs:
       length: 625 # max lenght of the variable for each event (eg: max number of tracks combinations)
       vars:
          - [track_ef_mask, null]
+   sv_points:
+      length: 5
+      vars:
+         - [sv_etarel, null]
+         - [sv_phirel, null]
+   sv_features:
+      length: 5
+      vars:
+         - [sv_pt_log, 2.8, 0.8]
+         - [sv_mass, 1.1, 0.6]
+         - [sv_etarel, null]
+         - [sv_phirel, null]
+         - [sv_abseta, 0.8, 1.2]
+         - [sv_ntracks, 3, 0.5]
+         - [sv_normchi2, 0.7, 0.7]
+         - [sv_dxy, 0.2, 0.6]
+         - [sv_dxysig, 5, 0.03]
+         - [sv_d3d, 0.35, 0.4]
+         - [sv_d3dsig, 5, 0.03]
+   sv_vectors:
+      length: 5
+      vars:
+         - [sv_px, null]
+         - [sv_py, null]
+         - [sv_pz, null]
+         - [sv_energy, null]
+   sv_mask:
+      length: 5
+      vars:
+         - [sv_mask, null]
 
 
 labels:
@@ -211,9 +211,9 @@ aux_labels:
       pf_var_IPsig: pf_IPsig
    value_regr:
       aux_labels_pf_regr_dist_pv: pf_dist_pv
-      aux_label_pf_regr_vtx_x: pf_vtx_x
-      aux_label_pf_regr_vtx_y: pf_vtx_y
-      aux_label_pf_regr_vtx_z: pf_vtx_z
+      #aux_label_pf_regr_vtx_x: pf_vtx_x
+      #aux_label_pf_regr_vtx_y: pf_vtx_y
+      #aux_label_pf_regr_vtx_z: pf_vtx_z
       pf_mask_from_b: pf_from_b
    value_pair:
       aux_label_pair_bin_dist_vtx: pair_dist_vtx
