--- a/performance/history_config.yaml
+++ b/performance/history_config.yaml
@@ -1,24 +1,24 @@
 # dictionary with the information to extract from the log files
 
 history_dict:
-    primary_train_loss: ("AvgLoss':' ", ",")
-    primary_train_acc: ("AvgAcc':' ", "\n")
-    comb_train_loss: ("AvgCombLoss':' ", ",")
-    aux_train_loss: ("AvgAuxLoss':' ", ",")
-    aux_train_accPF: ("AvgAuxAccPF':' ", ",")
-    aux_train_dist: ("AvgAuxDist':' ", ",")
-    aux_train_accPair: ("AvgAuxAccPair':' ", "\n")
-    primary_val_metric: ("validation metric':' ", " (")
-    primary_val_loss: ("validation loss':' ", " (")
-    comb_val_loss: ("validation combined loss':' ", " (")
-    aux_val_metricPF: ("validation aux metric PF':' ", " (")
-    aux_val_dist: ("validation aux distance':' ", " (")
-    aux_val_metricPair: ("validation aux metric pair':' ", " (")
-    aux_val_loss: ("validation aux loss':' ", " (")
-    primary_test_metric: ("test metric':' ", " (")
-    primary_test_loss: ("test loss':' ", " (")
-    comb_test_loss: ("test combined loss':' ", " (")
-    aux_test_metricPF: ("test aux metric PF':' ", " (")
-    aux_test_dist: ("test aux distance':' ", " (")
-    aux_test_metricPair: ("test aux metric pair':' ", " (")
-    aux_test_loss: ("test aux loss':' ", " (")
+    primary_train_loss: ["AvgLoss':' ", ","]
+    primary_train_acc: ["AvgAcc':' ", "\n"]
+    comb_train_loss: ["AvgCombLoss':' ", ","]
+    aux_train_loss: ["AvgAuxLoss':' ", ","]
+    aux_train_accPF: ["AvgAuxAccPF':' ", ","]
+    aux_train_dist: ["AvgAuxDist':' ", ","]
+    aux_train_accPair: ["AvgAuxAccPair':' ", "\n"]
+    primary_val_metric: ["validation metric':' ", " ("]
+    primary_val_loss: ["validation loss':' ", " ("]
+    comb_val_loss: ["validation combined loss':' ", " ("]
+    aux_val_metricPF: ["validation aux metric PF':' ", " ("]
+    aux_val_dist: ["validation aux distance':' ", " ("]
+    aux_val_metricPair: ["validation aux metric pair':' ", " ("]
+    aux_val_loss: ["validation aux loss':' ", " ("]
+    primary_test_metric: ["test metric':' ", " ("]
+    primary_test_loss: ["test loss':' ", " ("]
+    comb_test_loss: ["test combined loss':' ", " ("]
+    aux_test_metricPF: ["test aux metric PF':' ", " ("]
+    aux_test_dist: ["test aux distance':' ", " ("]
+    aux_test_metricPair: ["test aux metric pair':' ", " ("]
+    aux_test_loss: ["test aux loss':' ", " ("]
